change of names

--- a/carsharing_problem/carshare_ds.ipynb
+++ b/carsharing_problem/carshare_ds.ipynb
@@ -65,7 +65,7 @@
    "id": "0af6d1cb",
    "metadata": {},
    "source": [
-    "### Часть 1. Изучение общей информации:\n",
+    "### Part 1. Exploring General Information::\n",
     "<a id='part1'></a>"
    ]
   },
